--- a/writing.html
+++ b/writing.html
@@ -147,98 +147,98 @@
             <div class="clearfix maxwidth-sl mx-auto">
                 <div class="left-80 wrapper">
                     <ul class="none blog-list">
-                        <li class="borderline-bottom p-1">
-                            <span class="co-primary fw-bold picotext">2nd July, 2019</span>
+                        <li class="borderline-bottom py-1 mb-1">
+                            <span class="fw-bold picotext">2nd July, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="my-h d-blk co-richblack">
+                                <a href="" class="py-h mb-h d-blk co-richblack">
                                     CSS Animations: Understanding Keyframes.
                                 </a>
                             </h4>
-                            <span class="fw-bold">
+                            <span class="fw-bold picotext">
                                <a href="" class="co-primary prefix is-wider">#CSS</a>
                                <a href="" class="co-primary prefix is-wider">#Animations</a>
                             </span>
                         </li>
-                        <li class="borderline-bottom p-1">
-                            <span class="co-primary fw-bold picotext">23rd June, 2019</span>
+                        <li class="borderline-bottom py-1 mb-1">
+                            <span class="fw-bold picotext">23rd June, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="my-h d-blk co-richblack">
+                                <a href="" class="py-h mb-h d-blk co-richblack">
                                     Choosing Design Tools.
                                 </a>
                             </h4>
-                            <span class="fw-bold">
+                            <span class="fw-bold picotext">
                                <a href="" class="co-primary prefix is-wider">#Design</a>
                                <a href="" class="co-primary prefix is-wider">#UI</a>
                             </span>
                         </li>
-                        <li class="borderline-bottom p-1">
-                            <span class="co-primary fw-bold picotext">14th May, 2019</span>
+                        <li class="borderline-bottom py-1 mb-1">
+                            <span class="fw-bold picotext">14th May, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="my-h d-blk co-richblack">
+                                <a href="" class="py-h mb-h d-blk co-richblack">
                                     Semantic Markup and Why They are Necessary.
                                 </a>
                             </h4>
-                            <span class="fw-bold">
+                            <span class="fw-bold picotext">
                                 <a href="" class="co-primary prefix is-wider">#HTML</a>
                                 <a href="" class="co-primary prefix is-wider">#UI</a>
                             </span>
                         </li>
-                        <li class="borderline-bottom p-1">
-                            <span class="co-primary fw-bold picotext">1st May, 2019</span>
+                        <li class="borderline-bottom py-1 mb-1">
+                            <span class="fw-bold picotext">1st May, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="my-h d-blk co-richblack">
+                                <a href="" class="py-h mb-h d-blk co-richblack">
                                     Motivation for yet another day
                                 </a>
                             </h4>
-                            <span class="fw-bold">
+                            <span class="fw-bold picotext">
                                 <a href="" class="co-primary prefix is-wider">#Inspiration</a>
                                 <a href="" class="co-primary prefix is-wider">#UI</a>
                             </span>
                         </li>
-                        <li class="borderline-bottom p-1">
-                            <span class="co-primary fw-bold picotext">2nd July, 2019</span>
+                        <li class="borderline-bottom py-1 mb-1">
+                            <span class="fw-bold picotext">2nd July, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="my-h d-blk co-richblack">
+                                <a href="" class="py-h mb-h d-blk co-richblack">
                                     CSS Animations: Understanding Keyframes.
                                 </a>
                             </h4>
-                            <span class="fw-bold">
+                            <span class="fw-bold picotext">
                                <a href="" class="co-primary prefix is-wider">#CSS</a>
                                <a href="" class="co-primary prefix is-wider">#Animations</a>
                             </span>
                         </li>
-                        <li class="borderline-bottom p-1">
-                            <span class="co-primary fw-bold picotext">23rd June, 2019</span>
+                        <li class="borderline-bottom py-1 mb-1">
+                            <span class="fw-bold picotext">23rd June, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="my-h d-blk co-richblack">
+                                <a href="" class="py-h mb-h d-blk co-richblack">
                                     Choosing Design Tools.
                                 </a>
                             </h4>
-                            <span class="fw-bold">
-                               <a href="" class="co-primary prefix is-wider">#Design</a>
+                            <span class="fw-bold picotext">
+                               <a href="" class="co-primary prefix is-wider">#DESIGN</a>
                                <a href="" class="co-primary prefix is-wider">#UI</a>
                             </span>
                         </li>
-                        <li class="borderline-bottom p-1">
-                            <span class="co-primary fw-bold picotext">14th May, 2019</span>
+                        <li class="borderline-bottom py-1 mb-1">
+                            <span class="fw-bold picotext">14th May, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="my-h d-blk co-richblack">
+                                <a href="" class="py-h mb-h d-blk co-richblack">
                                     Semantic Markup and Why They are Necessary.
                                 </a>
                             </h4>
-                            <span class="fw-bold">
+                            <span class="fw-bold picotext">
                                 <a href="" class="co-primary prefix is-wider">#HTML</a>
                                 <a href="" class="co-primary prefix is-wider">#UI</a>
                             </span>
                         </li>
-                        <li class="borderline-bottom p-1">
-                            <span class="co-primary fw-bold picotext">1st May, 2019</span>
+                        <li class="borderline-bottom py-1 mb-1">
+                            <span class="fw-bold picotext">1st May, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="my-h d-blk co-richblack">
+                                <a href="" class="py-h mb-h d-blk co-richblack">
                                     Motivation for yet another day
                                 </a>
                             </h4>
-                            <span class="fw-bold">
+                            <span class="fw-bold picotext">
                                 <a href="" class="co-primary prefix is-wider">#Inspiration</a>
                                 <a href="" class="co-primary prefix is-wider">#UI</a>
                             </span>
