changed base font

--- a/writing.html
+++ b/writing.html
@@ -111,7 +111,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="d-blk p-1 co-richblack">
+                    <a href="about.html" class="d-blk p-1 co-richblack">
                         About
                     </a>
                 </li>
@@ -121,7 +121,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="writing.html" class="d-blk p-1 co-richblack">
+                    <a class="d-blk p-1 co-richblack">
                         Writing
                     </a>
                 </li>
