added work page

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="d-flx j-c-sb fixed-on-mobile bg-bg fixed-to-top w-100 al-i-c wrapper-x py-1">
-            <div class="logo-area d-flx al-i-c">
+            <a href="index.html" class="logo-area d-flx al-i-c">
                 <div class="prefix is-wider d-flx flex-dir-col al-i-c j-c-c">
                     <div class="back-svg pos-a">
                         <svg width="50" height="50" viewBox="0 0 60 54" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -85,10 +85,10 @@
                     </div>
                     <img src="img/small-pic.png" class="small-avatar z-depth-2" alt="">
                 </div>
-                <h5 class="m-0">
+                <h5 class="m-0 co-richblack">
                     ABOUT
                 </h5>
-            </div>
+            </a>
             <div class="nav-menu pos-r flex-hide-mediumup" onclick="showmenu(this)">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
@@ -106,27 +106,27 @@
         <div class="h-100 bg-white">
             <ul class="sub-ul none tx-c">
                <li>
-                    <a href="index.html" class="d-blk p-1 co-richblack">
+                    <a href="index.html" class="d-blk p-h co-richblack">
                         Home
                     </a>
                 </li>
                 <li>
-                    <a class="d-blk p-1 co-richblack">
+                    <a class="d-blk p-h co-richblack">
                         About
                     </a>
                 </li>
                 <li>
-                    <a href="work.html" class="d-blk p-1 co-richblack">
+                    <a href="work.html" class="d-blk p-h co-richblack">
                         Work
                     </a>
                 </li>
                 <li>
-                    <a href="writing.html" class="d-blk p-1 co-richblack">
+                    <a href="writing.html" class="d-blk p-h co-richblack">
                         Writing
                     </a>
                 </li>
                 <li>
-                    <a href="contact.html" class="d-blk p-1 co-richblack">
+                    <a href="contact.html" class="d-blk p-h co-richblack">
                         Contact
                     </a>
                 </li>
