--- a/work.html
+++ b/work.html
@@ -15,7 +15,7 @@
 
     <link href="css/style.css" rel="stylesheet" />
 
-    <title>Contact | Dennis Dickson | Frontend Designer and Developer.</title>
+    <title>Work | Dennis Dickson | Frontend Designer and Developer.</title>
     <meta property="og:title" content="Dennis Dickson" />
     <meta property="og:locale" content="en_US" />
     <meta name="description" content="Dennis Dickson | Frontend Designer and Developer.." />
@@ -56,7 +56,7 @@
                             </a>
                         </li>
                         <li class="my-h w-100">
-                            <a href="work.html" class="tx-c d-blk p-1 py-2h co-white">
+                            <a class="active tx-c d-blk p-1 py-2h co-white">
                                 Work
                             </a>
                         </li>
@@ -66,7 +66,7 @@
                             </a>
                         </li>
                         <li class="my-h w-100">
-                            <a class="active tx-c d-blk p-1 py-2h co-white">
+                            <a href="contact.html" class="tx-c d-blk p-1 py-2h co-white">
                                 Contact
                             </a>
                         </li>
@@ -76,17 +76,17 @@
         </div>
 
         <div class="d-flx j-c-sb fixed-on-mobile bg-bg fixed-to-top w-100 al-i-c wrapper-x py-1">
-            <a href="index.html" class="logo-area d-flx al-i-c">
+            <a href="index.html" class="logo-area bg-bg d-flx al-i-c">
                 <div class="prefix is-wider d-flx flex-dir-col al-i-c j-c-c">
                     <div class="back-svg pos-a">
-                            <svg width="50" height="50" viewBox="0 0 60 59" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M54.7957 2.579C61.3515 7.55528 61.4194 20.9216 56.6469 29.7193C51.8914 38.5339 42.2955 42.7969 32.3939 48.2827C22.4753 53.7854 12.268 60.5111 6.98601 57.6917C1.70402 54.8894 1.38132 42.5251 0.684985 32.3008C0.00562906 22.0935 -1.03039 14.0092 2.50226 9.72922C6.03491 5.43229 14.1362 4.93976 24.7002 2.96963C35.2472 1.01648 48.2569 -2.39728 54.7957 2.579Z" fill="#C359FF"/>
-                            </svg>                                
+                        <svg width="50" height="50" viewBox="0 0 60 57" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M57.8152 4.87573C61.4291 9.52666 59.8421 18.2314 58.1608 27.439C56.4639 36.6466 54.7041 46.3727 48.0891 51.7307C41.4898 57.073 30.0667 58.0629 19.9006 54.0876C9.71887 50.0966 0.825534 41.1247 0.055616 31.9485C-0.714302 22.7724 6.6392 13.4077 14.0713 7.89255C21.5033 2.37742 28.9982 0.696173 37.1688 0.161945C45.3393 -0.372284 54.1855 0.224795 57.8152 4.87573Z" fill="#7BDCB5"/>
+                        </svg>
                     </div>
                     <img src="img/small-pic.png" class="small-avatar z-depth-2" alt="">
                 </div>
                 <h5 class="m-0 co-richblack">
-                    CONTACT
+                    WORK
                 </h5>
             </a>
             <div class="nav-menu pos-r flex-hide-mediumup" onclick="showmenu(this)">
@@ -116,7 +116,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="work.html" class="d-blk p-h co-richblack">
+                    <a class="d-blk p-h co-richblack">
                         Work
                     </a>
                 </li>
@@ -143,11 +143,9 @@
 
 
     <main navcontrol>
-        <section class="width-100-pc">
-            <div class="wrapper maxwidth-tb mx-auto min-height-60-vh d-flx flex-dir-col j-c-c">
-                <p class="co-richblack tx-c">
-                    I’ll love to have a conversation with you. I’m somewhere on the web doing something right now. I’m either working with a repository on <a href="http://github.com/psybuglite" class="fw-bold co-primary">Github</a>, replying a tweet on <a href="http://twitter.com/psybugite" class="fw-bold co-primary">Twitter</a>,  or  You can find me quickly or see what I’m up to if you click one of of the links below. If you want to send me an email at <a href="mailto:itztonye@gmail.com" class="fw-bold co-primary">itztonye@gmail.com</a>
-                </p>
+        <section class="width-100-pc hide-flow-x writing-m-top">
+            <div class="clearfix maxwidth-sl mx-auto p-3 tx-c">
+                <h1>Work stuff will go here</h1>
             </div>
         </section>
     </main>
