--- a/writing.html
+++ b/writing.html
@@ -76,19 +76,19 @@
         </div>
 
         <div class="d-flx j-c-sb fixed-on-mobile bg-bg fixed-to-top w-100 al-i-c wrapper-x py-1">
-            <div class="logo-area bg-bg d-flx al-i-c">
+            <a href="index.html" class="logo-area bg-bg d-flx al-i-c">
                 <div class="prefix is-wider d-flx flex-dir-col al-i-c j-c-c">
                     <div class="back-svg pos-a">
-                        <svg width="50" height="50" viewBox="0 0 60 54" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M53.8094 13.2771C59.433 21.3321 61.6335 31.1258 58.6995 38.067C55.7654 45.0082 47.7104 49.0833 40.3074 51.4875C32.9043 53.9054 26.1397 54.6389 18.2477 52.7508C10.3557 50.8627 1.33619 46.3394 0.140843 40.2811C-1.05451 34.2229 5.57426 26.6025 11.8634 18.398C18.1526 10.1936 24.1022 1.40504 31.6139 0.155356C39.112 -1.08075 48.1722 5.22201 53.8094 13.2771Z" fill="#F78DA7"/>
-                        </svg> 
+                        <svg width="50" height="50" viewBox="0 0 60 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M58.8258 8.44706C62.0605 14.5334 57.932 24.4362 54.6406 32.7925C51.3491 41.1346 48.8663 47.9304 44.0994 50.3848C39.3325 52.8534 32.2814 50.9806 23.925 48.2992C15.5687 45.6178 5.92132 42.1278 2.03399 34.5943C-1.86752 27.0608 -0.0089856 15.4982 6.34693 8.70243C12.717 1.9067 23.5845 -0.122082 34.3101 0.00560429C45.0216 0.119103 55.6053 2.37489 58.8258 8.44706Z" fill="#FE840E"/>
+                        </svg>
                     </div>
                     <img src="img/small-pic.png" class="small-avatar z-depth-2" alt="">
                 </div>
-                <h5 class="m-0">
+                <h5 class="m-0 co-richblack">
                     WRITING
                 </h5>
-            </div>
+            </a>
             <div class="nav-menu pos-r flex-hide-mediumup" onclick="showmenu(this)">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
@@ -106,27 +106,27 @@
         <div class="h-100 bg-white">
             <ul class="sub-ul none tx-c">
                <li>
-                    <a href="index.html" class="d-blk p-1 co-richblack">
+                    <a href="index.html" class="d-blk p-h co-richblack">
                         Home
                     </a>
                 </li>
                 <li>
-                    <a href="about.html" class="d-blk p-1 co-richblack">
+                    <a href="about.html" class="d-blk p-h co-richblack">
                         About
                     </a>
                 </li>
                 <li>
-                    <a href="work.html" class="d-blk p-1 co-richblack">
+                    <a href="work.html" class="d-blk p-h co-richblack">
                         Work
                     </a>
                 </li>
                 <li>
-                    <a class="d-blk p-1 co-richblack">
+                    <a class="d-blk p-h co-richblack">
                         Writing
                     </a>
                 </li>
                 <li>
-                    <a href="contact.html" class="d-blk p-1 co-richblack">
+                    <a href="contact.html" class="d-blk p-h co-richblack">
                         Contact
                     </a>
                 </li>
