--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 
         <div class="d-flx bg-bg j-c-sb al-i-c fixed-on-mobile fixed-to-top w-100 wrapper-x py-1">
 
-            <div class="logo-area">
-                <p class="text-dance">
+            <a  href="index.html" class="logo-area">
+                <p class="text-dance co-richblack">
                     Tonye Dickson
                 </p>
-            </div>
+            </a>
             <div class="nav-menu pos-r flex-hide-mediumup" onclick="showmenu(this)">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
@@ -98,27 +98,27 @@
         <div class="h-100 bg-white">
             <ul class="sub-ul none tx-c">
                <li>
-                    <a class="d-blk p-1 co-richblack">
+                    <a class="d-blk p-h co-richblack">
                         Home
                     </a>
                 </li>
                 <li>
-                    <a href="about.html" class="d-blk p-1 co-richblack">
+                    <a href="about.html" class="d-blk p-h co-richblack">
                         About
                     </a>
                 </li>
                 <li>
-                    <a href="work.html" class="d-blk p-1 co-richblack">
+                    <a href="work.html" class="d-blk p-h co-richblack">
                         Work
                     </a>
                 </li>
                 <li>
-                    <a href="writing.html" class="d-blk p-1 co-richblack">
+                    <a href="writing.html" class="d-blk p-h co-richblack">
                         Writing
                     </a>
                 </li>
                 <li>
-                    <a href="contact.html" class="d-blk p-1 co-richblack">
+                    <a href="contact.html" class="d-blk p-h co-richblack">
                         Contact
                     </a>
                 </li>
