--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" sizes="180x180" href="uploads/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="uploads/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="uploads/favicons/favicon-16x16.png">
-    <link rel="manifest" href="uploads/favicons/site.webmanifest">
-    <link rel="mask-icon" href="uploads/favicons/safari-pinned-tab.svg" color="#2274a5">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <link rel="manifest" href="favicons/site.webmanifest">
+    <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#2274a5">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
 
