modified open graph info

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <link href="css/style.css" rel="stylesheet" />
 
     <title>Contact | Dennis Dickson | Frontend Designer and Developer.</title>
+    <meta property="og:image" content="https://res.cloudinary.com/psybug/image/upload/v1550574723/android-chrome-512x512_xtcrp6.png" />
     <meta property="og:title" content="Dennis Dickson" />
     <meta property="og:locale" content="en_US" />
     <meta name="description" content="Dennis Dickson | Frontend Designer and Developer.." />
