--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,8 @@
         Tonye
     </h1>
     <header class="site-header">
-        <div class="w-100 bg-branddark show-mediumup">
-            <div class="maxwidth-xl h-100 mx-auto">
+        <div class="w-100 bg-branddark height-100-vh d-flx flex-dir-col al-i-c j-c-c flex-show-mediumup">
+
                 <nav class="d-flx j-c-sb flex-dir-col al-i-c">
                     <ul class="none d-flx j-c-c flex-dir-col h-100 al-i-c topmenu">
                         <li class="my-h w-100">
@@ -74,7 +74,6 @@
                         </li>
                     </ul>
                 </nav>
-            </div>
         </div>
 
         <div class="d-flx j-c-sb fixed-on-mobile bg-bg fixed-to-top w-100 al-i-c wrapper-x py-1">
