doctype affected header appearance

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         Tonye
     </h1>
     <header class="site-header">
-        <div class="w-100 bg-branddark height-100-vh d-flx flex-dir-col al-i-c j-c-c flex-show-mediumup">
+        <div class="w-100 bg-branddark height-100-vh flex-dir-col al-i-c j-c-c flex-show-mediumup">
 
                 <nav class="d-flx j-c-sb flex-dir-col al-i-c">
                     <ul class="none d-flx j-c-c flex-dir-col h-100 al-i-c topmenu">
