--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
             <a href="index.html" class="logo-area d-flx al-i-c">
                 <div class="prefix is-wider d-flx flex-dir-col al-i-c j-c-c">
                     <div class="back-svg pos-a">
-                        <svg width="50" height="50" viewBox="0 0 60 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg width="45" height="45" viewBox="0 0 60 54" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M53.8094 13.2771C59.433 21.3321 61.6335 31.1258 58.6995 38.067C55.7654 45.0082 47.7104 49.0833 40.3074 51.4875C32.9043 53.9054 26.1397 54.6389 18.2477 52.7508C10.3557 50.8627 1.33619 46.3394 0.140843 40.2811C-1.05451 34.2229 5.57426 26.6025 11.8634 18.398C18.1526 10.1936 24.1022 1.40504 31.6139 0.155356C39.112 -1.08075 48.1722 5.22201 53.8094 13.2771Z" fill="#F78DA7"/>
                         </svg> 
                     </div>
@@ -106,27 +106,27 @@
         <div class="h-100 bg-white">
             <ul class="sub-ul none tx-c">
                <li>
-                    <a href="index.html" class="d-blk p-h co-richblack">
+                    <a href="index.html" class="d-blk p-hh co-richblack">
                         Home
                     </a>
                 </li>
                 <li>
-                    <a class="d-blk p-h co-richblack">
+                    <a class="d-blk p-hh co-richblack">
                         About
                     </a>
                 </li>
                 <li>
-                    <a href="work.html" class="d-blk p-h co-richblack">
+                    <a href="work.html" class="d-blk p-hh co-richblack">
                         Work
                     </a>
                 </li>
                 <li>
-                    <a href="writing.html" class="d-blk p-h co-richblack">
+                    <a href="writing.html" class="d-blk p-hh co-richblack">
                         Writing
                     </a>
                 </li>
                 <li>
-                    <a href="contact.html" class="d-blk p-h co-richblack">
+                    <a href="contact.html" class="d-blk p-hh co-richblack">
                         Contact
                     </a>
                 </li>
