--- a/writing.html
+++ b/writing.html
@@ -79,7 +79,7 @@
             <a href="index.html" class="logo-area bg-bg d-flx al-i-c">
                 <div class="prefix is-wider d-flx flex-dir-col al-i-c j-c-c">
                     <div class="back-svg pos-a">
-                        <svg width="50" height="50" viewBox="0 0 60 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg width="45" height="45" viewBox="0 0 60 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M58.8258 8.44706C62.0605 14.5334 57.932 24.4362 54.6406 32.7925C51.3491 41.1346 48.8663 47.9304 44.0994 50.3848C39.3325 52.8534 32.2814 50.9806 23.925 48.2992C15.5687 45.6178 5.92132 42.1278 2.03399 34.5943C-1.86752 27.0608 -0.0089856 15.4982 6.34693 8.70243C12.717 1.9067 23.5845 -0.122082 34.3101 0.00560429C45.0216 0.119103 55.6053 2.37489 58.8258 8.44706Z" fill="#FE840E"/>
                         </svg>
                     </div>
@@ -105,27 +105,27 @@
         <div class="h-100 bg-white">
             <ul class="sub-ul none tx-c">
                <li>
-                    <a href="index.html" class="d-blk p-h co-richblack">
+                    <a href="index.html" class="d-blk p-hh co-richblack">
                         Home
                     </a>
                 </li>
                 <li>
-                    <a href="about.html" class="d-blk p-h co-richblack">
+                    <a href="about.html" class="d-blk p-hh co-richblack">
                         About
                     </a>
                 </li>
                 <li>
-                    <a href="work.html" class="d-blk p-h co-richblack">
+                    <a href="work.html" class="d-blk p-hh co-richblack">
                         Work
                     </a>
                 </li>
                 <li>
-                    <a class="d-blk p-h co-richblack">
+                    <a class="d-blk p-hh co-richblack">
                         Writing
                     </a>
                 </li>
                 <li>
-                    <a href="contact.html" class="d-blk p-h co-richblack">
+                    <a href="contact.html" class="d-blk p-hh co-richblack">
                         Contact
                     </a>
                 </li>
