--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
             <a href="index.html" class="logo-area d-flx al-i-c">
                 <div class="prefix is-wider d-flx flex-dir-col al-i-c j-c-c">
                     <div class="back-svg pos-a">
-                            <svg width="50" height="50" viewBox="0 0 60 59" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg width="45" height="45" viewBox="0 0 60 59" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M54.7957 2.579C61.3515 7.55528 61.4194 20.9216 56.6469 29.7193C51.8914 38.5339 42.2955 42.7969 32.3939 48.2827C22.4753 53.7854 12.268 60.5111 6.98601 57.6917C1.70402 54.8894 1.38132 42.5251 0.684985 32.3008C0.00562906 22.0935 -1.03039 14.0092 2.50226 9.72922C6.03491 5.43229 14.1362 4.93976 24.7002 2.96963C35.2472 1.01648 48.2569 -2.39728 54.7957 2.579Z" fill="#C359FF"/>
                             </svg>                                
                     </div>
@@ -106,27 +106,27 @@
         <div class="h-100 bg-white">
             <ul class="sub-ul none tx-c">
                <li>
-                    <a href="index.html" class="d-blk p-h co-richblack">
+                    <a href="index.html" class="d-blk p-hh co-richblack">
                         Home
                     </a>
                 </li>
                 <li>
-                    <a href="about.html" class="d-blk p-h co-richblack">
+                    <a href="about.html" class="d-blk p-hh co-richblack">
                         About
                     </a>
                 </li>
                 <li>
-                    <a href="work.html" class="d-blk p-h co-richblack">
+                    <a href="work.html" class="d-blk p-hh co-richblack">
                         Work
                     </a>
                 </li>
                 <li>
-                    <a href="writing.html" class="d-blk p-h co-richblack">
+                    <a href="writing.html" class="d-blk p-hh co-richblack">
                         Writing
                     </a>
                 </li>
                 <li>
-                    <a href="contact.html" class="d-blk p-h co-richblack">
+                    <a href="contact.html" class="d-blk p-hh co-richblack">
                         Contact
                     </a>
                 </li>
