--- a/work.html
+++ b/work.html
@@ -79,7 +79,7 @@
             <a href="index.html" class="logo-area bg-bg d-flx al-i-c">
                 <div class="prefix is-wider d-flx flex-dir-col al-i-c j-c-c">
                     <div class="back-svg pos-a">
-                        <svg width="50" height="50" viewBox="0 0 60 57" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg width="45" height="45" viewBox="0 0 60 57" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M57.8152 4.87573C61.4291 9.52666 59.8421 18.2314 58.1608 27.439C56.4639 36.6466 54.7041 46.3727 48.0891 51.7307C41.4898 57.073 30.0667 58.0629 19.9006 54.0876C9.71887 50.0966 0.825534 41.1247 0.055616 31.9485C-0.714302 22.7724 6.6392 13.4077 14.0713 7.89255C21.5033 2.37742 28.9982 0.696173 37.1688 0.161945C45.3393 -0.372284 54.1855 0.224795 57.8152 4.87573Z" fill="#7BDCB5"/>
                         </svg>
                     </div>
@@ -106,27 +106,27 @@
         <div class="h-100 bg-white">
             <ul class="sub-ul none tx-c">
                <li>
-                    <a href="index.html" class="d-blk p-h co-richblack">
+                    <a href="index.html" class="d-blk p-hh co-richblack">
                         Home
                     </a>
                 </li>
                 <li>
-                    <a href="about.html" class="d-blk p-h co-richblack">
+                    <a href="about.html" class="d-blk p-hh co-richblack">
                         About
                     </a>
                 </li>
                 <li>
-                    <a class="d-blk p-h co-richblack">
+                    <a class="d-blk p-hh co-richblack">
                         Work
                     </a>
                 </li>
                 <li>
-                    <a href="writing.html" class="d-blk p-h co-richblack">
+                    <a href="writing.html" class="d-blk p-hh co-richblack">
                         Writing
                     </a>
                 </li>
                 <li>
-                    <a href="contact.html" class="d-blk p-h co-richblack">
+                    <a href="contact.html" class="d-blk p-hh co-richblack">
                         Contact
                     </a>
                 </li>
