--- a/index.html
+++ b/index.html
@@ -98,27 +98,27 @@
         <div class="h-100 bg-white">
             <ul class="sub-ul none tx-c">
                <li>
-                    <a class="d-blk p-h co-richblack">
+                    <a class="d-blk p-hh co-richblack">
                         Home
                     </a>
                 </li>
                 <li>
-                    <a href="about.html" class="d-blk p-h co-richblack">
+                    <a href="about.html" class="d-blk p-hh co-richblack">
                         About
                     </a>
                 </li>
                 <li>
-                    <a href="work.html" class="d-blk p-h co-richblack">
+                    <a href="work.html" class="d-blk p-hh co-richblack">
                         Work
                     </a>
                 </li>
                 <li>
-                    <a href="writing.html" class="d-blk p-h co-richblack">
+                    <a href="writing.html" class="d-blk p-hh co-richblack">
                         Writing
                     </a>
                 </li>
                 <li>
-                    <a href="contact.html" class="d-blk p-h co-richblack">
+                    <a href="contact.html" class="d-blk p-hh co-richblack">
                         Contact
                     </a>
                 </li>
