--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
 
 
 
-    <main navcontrol>
+    <main>
         <section class="width-100-pc hide-flow-x">
             <div class="wrapper grid-2 maxwidth-sl mx-auto">
                 <div class="p-1 d-flx flex-dir-col j-c-c al-i-c pos-r mb-2 min-h-80">
