--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
 
 
 
-    <main navcontrol>
+    <main>
         <section class="width-100-pc">
             <div class="wrapper maxwidth-tb mx-auto min-height-60-vh d-flx flex-dir-col j-c-c">
                 <p class="co-richblack tx-c">
