--- a/eyowo.html
+++ b/eyowo.html
@@ -142,7 +142,7 @@
 
 
 
-    <main navcontrol>
+    <main>
         <section class="width-100-pc hide-flow-x writing-m-top">
             <div class="clearfix maxwidth-sl mx-auto p-3 tx-c">
                 <h1>Work stuff will go here</h1>
