--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 
 
-    <main navcontrol>
+    <main>
         <section class="width-100-pc">
             <div class="clearfix">
                 <div class="right-50 mobile-wrapper-x">
