--- a/writing.html
+++ b/writing.html
@@ -141,7 +141,7 @@
 
 
 
-    <main navcontrol>
+    <main>
         <section class="width-100-pc hide-flow-x writing-m-top">
             <div class="clearfix maxwidth-sl mx-auto">
                 <div class="left-80 wrapper">
