--- a/work.html
+++ b/work.html
@@ -144,8 +144,29 @@
 
     <main>
         <section class="width-100-pc hide-flow-x writing-m-top">
-            <div class="clearfix maxwidth-sl mx-auto p-3 tx-c">
-                <h1>Work stuff will go here</h1>
+            <div class="maxwidth-sl mx-auto p-3 tx-c h-100">
+                <div class="grid is-multi-col mostly-3">
+                    <a href="" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
+                        <img src="img/eyowo.png" class="w-link" alt="">
+                        <p class="pt-2 co-richblack">Design/Development</p>
+                    </a>
+                    <a href="" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
+                        <img src="img/cpc.png" class="w-link" alt="">
+                        <p class="pt-2 co-richblack">Design/Development</p>
+                    </a>
+                    <a href="" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
+                        <img src="img/swinvoice.png" class="w-link" alt="">
+                        <p class="pt-2 co-richblack">Design/Development</p>
+                    </a>
+                    <a href="" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
+                        <img src="img/festivesave.png" class="w-link" alt="">
+                        <p class="pt-2 co-richblack">Design/Development</p>
+                    </a>
+                    <a href="" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
+                        <img src="img/monetran.png" class="w-link" alt="">
+                        <p class="pt-2 co-richblack">Design/Development</p>
+                    </a>
+                </div>
             </div>
         </section>
     </main>
