--- a/eyowo.html
+++ b/eyowo.html
@@ -144,8 +144,61 @@
 
     <main>
         <section class="width-100-pc hide-flow-x writing-m-top">
-            <div class="clearfix maxwidth-sl mx-auto p-3 tx-c">
-                <h1>Work stuff will go here</h1>
+            <div class="maxwidth-sl mx-auto wrapper">
+                <div class="d-ibl pb-3">
+                    <img src="img/eyowo.png" class="w-auto logo-contain" alt="Eyowo logo">
+                </div>
+
+                <h2 class="mb-2">Overview</h2>
+                <div class="grid-medium-2 pb-2">
+                    <article>
+                        <h4 class="co-primary mt-0">Project</h4>
+                        <p>Eyowo is a Nigerian company solving a payment issue in the country by providing a platform where payments can be made online or offline to everyone. Built for users with or without banking credentials.</p>
+                    </article>
+                    <article>
+                        <h4 class="co-primary mt-0">Responsibilities</h4>
+                        <p>Building a fast and responsive marketing Web site for the company as well as develop the interface for the Web app of the product. Worked as part of the design team ot ensure that users with varying devices get an equally rich platform experience.</p>
+                    </article>
+                    <article>
+                        <h4 class="co-primary mt-0">Role</h4>
+                        <p>Web Developer, UI Developer</p>
+                    </article>
+                    <article>
+                        <h4 class="co-primary mt-0">Project Duration</h4>
+                        <p>4 - 6 Months</p>
+                    </article>
+                    <article>
+                        <h4 class="co-primary mt-0">URL and Links</h4>
+                        <p><a href="https://eyowo.com" class="co-primary" title="eyowo website link">https://eyowo.com</a> , <a href="https://app.eyowo.com" class="co-primary" title="eyowo web app link">https://app.eyowo.com</a></p>
+                    </article>
+                </div>
+                <h2 class="mb-2">Communication and Process</h2>
+                <div class="grid-medium-2 pb-2">
+                    <article>
+                        <h4 class="sr">Eyowo Project</h4>
+                        <p>
+                            Most everyday team communications took place in a Slack channel which we used for general communications such as keeping track of progress and posting and getting quick answers and questions regarding the design and UX, as well as the progress of the project.
+                        </p><p>
+                            Whenever needed, design assets would also be shared in the channel. For example, while working on implementing the design and assets, many of the assets I got (especially images) had to be redesigned and recreated to provide further and better optimizations before they could be used.
+                        </p>
+                    </article>
+                    <article>
+                        
+                    </article>
+                    <article>
+                        <h4 class="sr">Eyowo Project</h4>
+                        <p>
+                            The designers, led by Temidayo Oluwaniyi — a very talented designer with an impeccable attention to detail, would create the assets and send them over to me via the Slack channel.
+                        </p><p>
+                            The project was based on an agile approach which welcomed changes and iterations as and when they were required and necessary based on the then current progress. These discussions were always fruitful and had a direct impact on how the design and back-end synchronized together and how they affected the design of the interface—more specifically, that of the Web application dashboard. My role as a front-end developer was to bridge and connect the two tiers to help build a more user as well as dev- and design-friendly UI/X.
+                        </p>
+                    </article>
+                </div>
+                <h2 class="mb-2">The Result</h2>
+                <div class="bg-primary co-white p-1h">
+                    <p>Please note: the screenshots shown in this case study are screenshots of the UI I built and finished in Mid July, 2018. </p>
+                    <p>The UI or some of its component styles [may] have changed since then, as the Eyowo team [may] have made some changes to it after I left the team.</p>
+                </div>
             </div>
         </section>
     </main>
