--- a/work.html
+++ b/work.html
@@ -146,24 +146,24 @@
         <section class="width-100-pc hide-flow-x writing-m-top">
             <div class="maxwidth-sl mx-auto p-3 tx-c h-100">
                 <div class="grid is-multi-col mostly-3">
-                    <a href="" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
-                        <img src="img/eyowo.png" class="w-link" alt="">
+                    <a href="eyowo.html" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
+                        <img src="img/eyowo.png" class="w-link" alt="Eyowo logo">
                         <p class="pt-2 co-richblack">Design/Development</p>
                     </a>
-                    <a href="" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
-                        <img src="img/cpc.png" class="w-link" alt="">
+                    <a href="cpc.html" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
+                        <img src="img/cpc.png" class="w-link" alt="CPC logo">
                         <p class="pt-2 co-richblack">Design/Development</p>
                     </a>
-                    <a href="" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
-                        <img src="img/swinvoice.png" class="w-link" alt="">
+                    <a href="swinvoice.html" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
+                        <img src="img/swinvoice.png" class="w-link" alt="Swinvoice logo">
                         <p class="pt-2 co-richblack">Design/Development</p>
                     </a>
-                    <a href="" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
-                        <img src="img/festivesave.png" class="w-link" alt="">
+                    <a href="festivesave.html" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
+                        <img src="img/festivesave.png" class="w-link" alt="Festivesave">
                         <p class="pt-2 co-richblack">Design/Development</p>
                     </a>
-                    <a href="" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
-                        <img src="img/monetran.png" class="w-link" alt="">
+                    <a href="monetran.html" class="work-item d-flx flex-dir-col al-i-c j-c-c p-2">
+                        <img src="img/monetran.png" class="w-link" alt="Monetran logo">
                         <p class="pt-2 co-richblack">Design/Development</p>
                     </a>
                 </div>
