--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
                             from Lagos, Nigeria
                         </p>
                         <div class="d-flx py-2 mobile-center">
-                            <button class="bg-primary d-ibl thin-primary-border px-3 py-hh microtext co-white">
+                            <button class="bg-primary d-ibl thin-primary-border px-3 py-hh co-white">
                                 Hire Me
                             </button>
-                            <button class="bg-bg thin-primary-border px-1h suffix is-wider py-hh microtext co-richblack">
+                            <button class="bg-bg thin-primary-border px-1h suffix is-wider py-hh co-richblack">
                                 View Resume
                             </button>
                         </div>
